adding browseraction and popup

--- a/manifest.json
+++ b/manifest.json
@@ -6,11 +6,19 @@
   "background": {
     "scripts": ["jquery.min.js", "dmapull.js"]
   },
-  "permissions": [
+	"browser_action": {
+          "default_icon": {                    // optional
+            "19": "favicon.png"           // optional
+            //"38": "images/icon38.png"            // optional
+          },
+          "default_title": "0"     // optional; shown in tooltip
+          //"default_popup": "popup.html"        // optional
+        },
+	"permissions": [
     "downloads",
 	"webRequest",
     "http://dma/index.do",
 	"http://madmasrv01/*"
-  ],
-  "content_security_policy": "script-src 'self' 'unsafe-eval' 'dma'; object-src 'self'"
+  ]
+  //"content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'"
 }
