--- a/manifest.json
+++ b/manifest.json
@@ -10,15 +10,15 @@
           "default_icon": {                    // optional
             "19": "favicon.png"           // optional
             //"38": "images/icon38.png"            // optional
-          },
-          "default_title": "0",     // optional; shown in tooltip
-          "default_popup": "popup.html"        // optional
+          }                                                                
+          //"default_title": "0",     // optional; shown in tooltip
+          //"default_popup": "popup.html"        // optional
         },
 	"permissions": [
     "downloads", "downloads.open", "downloads.shelf",
-	"webRequest",
+	"webRequest", "webRequestBlocking", 
     "http://dma/index.do",
 	"http://madmasrv01/*"
-  ]
-  //"content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'"
+  ],
+  "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'"
 }
